Clean up html labels

--- a/samples/dash-if-reference-player/index.html
+++ b/samples/dash-if-reference-player/index.html
@@ -924,35 +924,35 @@
                 
                 <!-- Selected bitrate (Mbps) -->
                 <div class="text-success">
-                    <label class="text-primary" for="--" data-toggle="tooltip"
+                    <label class="text-primary" data-toggle="tooltip"
                            data-placement="top">Selected bitrate (Mbps) : </label> 
                            {{videoSelectedBitrate}}
                 </div>
 
                 <!-- Buffer level (second) -->
                 <div class="text-success">
-                    <label class="text-primary" for="--" data-toggle="tooltip"
-                           data-placement="top">Buffer level (second) : </label> 
+                    <label class="text-primary" data-toggle="tooltip"
+                           data-placement="top">Buffer level (seconds) : </label> 
                            {{videoBufferLevel}}
                 </div>
 
                 <!-- Measured throughput (Mbps) -->
                 <div class="text-success">
-                    <label class="text-primary" for="--" data-toggle="tooltip"
+                    <label class="text-primary" data-toggle="tooltip"
                            data-placement="top">Measured Throughput (Mbps) : </label> 
                            {{videoMeasuredThroughput}}
                 </div>
 
                 <!-- Segment Download Time (second) -->
                 <div class="text-success">
-                    <label class="text-primary" for="--" data-toggle="tooltip"
-                           data-placement="top">Segment Download Time (second) : </label> 
+                    <label class="text-primary" data-toggle="tooltip"
+                           data-placement="top">Segment Download Time (seconds) : </label> 
                            {{videoSegmentDownloadTime}}
                 </div>
 
                 <!-- Segment size (byte) -->
                 <div class="text-success">
-                    <label class="text-primary" for="--" data-toggle="tooltip"
+                    <label class="text-primary" data-toggle="tooltip"
                            data-placement="top">Segment size (byte) : </label> 
                            {{videoSegmentSize}}
                 </div>
@@ -962,7 +962,7 @@
 
                 <!-- Segment size (byte) -->
                 <div class="text-success">
-                    <label class="text-primary" for="--" data-toggle="tooltip"
+                    <label class="text-primary" data-toggle="tooltip"
                            data-placement="top">8 second interval progress : </label> 
                            {{intervalProgress}}
                 </div>
