Add requested video url and segment size in bytes

--- a/samples/dash-if-reference-player/index.html
+++ b/samples/dash-if-reference-player/index.html
@@ -956,6 +956,13 @@
                            data-placement="top">Segment size (byte) : </label> 
                            {{videoSegmentSize}}
                 </div>
+
+                <hr/>
+                <div class="text-success">
+                    <label class="text-primary" data-toggle="tooltip"
+                           data-placement="top" >Requested url : </label> 
+                           <span style="word-wrap: break-word!important">{{videoRequestedUrl}}</span>
+                </div>
             </div>
 
             <div>
